[tool.black]
line-length = 79
py36 = true

[tool.poetry]
name = "pygatherer"
version = "0.0.1"
description = "An API for the gatherer"
authors = ["Steph Papanik <spapanik21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"

requests = "^2.19"
beautifulsoup4 = "^4.6"
lxml = "^4.2"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
