[tool.black]
line-length = 79
py36 = true

[tool.poetry]
name = "pygatherer"
version = "0.3.0"
description = "An API for the gatherer"
authors = ["spapanik <spapanik21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

requests = "^2.0"
beautifulsoup4 = "^4.0"
lxml = "^4.0"

[tool.poetry.dev-dependencies]
# formatting
black = {version = "*", allows-prereleases = true}

# debugging
ipython = "^7.2"
ipdb = "^0.11.0"

# testing
pytest = "^4.0"
